# matrix-structs

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  test.sh
cmake/: CompilerFlags.cmake  Doxygen.cmake  GoogleTest.cmake  MatrixStructsConfig.cmake.in
docs/: aliases_8hpp_source.html  annotated.html  annotated_dup.js  audio_8hpp_source.html  avatar_8hpp_source.html  canonical__alias_8hpp_source.html  classes.html  classmtx_1_1identifiers_1_1_event-members.html  classmtx_1_1identifiers_1_1_event.html  classmtx_1_1identifiers_1_1_event.js  classmtx_1_1identifiers_1_1_i_d-members.html  classmtx_1_1identifiers_1_1_i_d.html  classmtx_1_1identifiers_1_1_i_d.js  classmtx_1_1identifiers_1_1_room-members.html  classmtx_1_1identifiers_1_1_room.html  classmtx_1_1identifiers_1_1_room.js  classmtx_1_1identifiers_1_1_user-members.html  classmtx_1_1identifiers_1_1_user.html  classmtx_1_1identifiers_1_1_user.js  collections_8hpp_source.html  create_8hpp_source.html  dir_14e1e259e8275dc0c459acef3bbf05ae.html  dir_5f8359ab4dfad28311098385b8aa2816.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a94710208e77eb32af8db9ed01f64cc8.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_db781d0c97e2defe33b53a2d25e5f3d3.html  dir_e39ec57c41a7c8de8661a0865bacf4fa.html  dir_ea9d594705532b3ca25d4700b79c60bf.html  dir_f2a1594ffd66eff865622f32106e418e.html  emote_8hpp_source.html  events_2common_8hpp_source.html  events_8hpp_source.html  file_8hpp_source.html  files.html  files.js  functions.html  functions_func.html  functions_rela.html  functions_vars.html  (+169 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+30 more)
include/: mtx.hpp
include/mtx/: common.hpp  events.hpp  identifiers.hpp  macros.hpp  requests.hpp  responses.hpp
include/mtx/events/: aliases.hpp  avatar.hpp  canonical_alias.hpp  collections.hpp  common.hpp  create.hpp  encrypted.hpp  guest_access.hpp  history_visibility.hpp  join_rules.hpp  member.hpp  name.hpp  pinned_events.hpp  power_levels.hpp  redaction.hpp  tag.hpp  topic.hpp
include/mtx/events/messages/: audio.hpp  emote.hpp  file.hpp  image.hpp  notice.hpp  text.hpp  video.hpp
include/mtx/responses/: common.hpp  crypto.hpp  empty.hpp  login.hpp  messages.hpp  notifications.hpp  profile.hpp  sync.hpp  version.hpp
src/: events.cpp  requests.cpp
src/events/: aliases.cpp  avatar.cpp  canonical_alias.cpp  create.cpp  encrypted.cpp  guest_access.cpp  history_visibility.cpp  join_rules.cpp  member.cpp  name.cpp  pinned_events.cpp  redaction.cpp  topic.cpp
src/events/messages/: image.cpp
src/responses/: common.cpp  create_room.cpp  login.cpp  notifications.cpp  profile.cpp  register.cpp  sync.cpp
tests/: crypto.cpp  events.cpp  identifiers.cpp  messages.cpp  requests.cpp  responses.cpp
